# s4p_mnist

./: .env  .gitignore  LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  app.py  docker-compose.yaml  flow.sh  main.py  predictions.csv  pyproject.toml  requirements.txt  requirements_dev.txt  stats.prof
.github/workflows/: ci.yml  cml.yml  docker.yml  hf_spaces.yml
api/: README.md  __init__.py  main.py  schemas.py
configs/: README.md  config.yaml
data/: README.md
dockerfiles/: Dockerfile  README.md
docs/: PHASE1.md  PHASE2.md  PHASE3.md  api.md  getting_started.md  index.md  mkdocs.yml
models/: model.joblib
notebooks/: README.md  exploration.ipynb
src/S4P_MNIST/: __init__.py  config.py  predict_model.py  train_model.py
src/S4P_MNIST/data/: __init__.py  loaders.py  make_dataset.py
src/S4P_MNIST/evaluation/: __init__.py
src/S4P_MNIST/features/: __init__.py  build_features.py
src/S4P_MNIST/models/: __init__.py  model.py
src/S4P_MNIST/utils/: __init__.py
src/S4P_MNIST/visualization/: __init__.py  visualize.py
src/s4p_mnist/: __init__.py  config.py  logging_config.py  predict_model.py  train_model.py
src/s4p_mnist/data/: __init__.py  loaders.py  make_dataset.py
src/s4p_mnist/evaluation/: __init__.py
src/s4p_mnist/features/: __init__.py
src/s4p_mnist/models/: model.py
src/s4p_mnist/utils/: __init__.py  io.py
src/s4p_mnist/visualization/: visualize.py
tests/: conftest.py  test_data.py  test_model.py
