[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s4p_mnist"
version = "0.1.0"
description = "machine learning for MNIST"
authors = [
    {name = "Cindy Cai", email = "ccai5@depaul.edu"}
]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "wandb>=0.18.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "dvc>=3.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.ruff]
line-length = 88
target-version = "py311"
# EDA notebook: not linted like library code (avoids dozens of I/E/W/UP issues in CI).
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
# N803/N806: sklearn-style X, y, X_train.
ignore = ["N803", "N806"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
# Third-party libs without stubs (pandas, sklearn, joblib, torchvision, tensorflow).
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools.packages.find]
where = ["src"]
